--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
 
 <body>
 
+  <!-- Header Section -->
+  <header class="flex bar">
+  <!-- Navigation Bar -->
+    <div class="flex logo">
+      <img src="./resources/images/logo-white.png" alt="White glasses icon."  />
+      <span>Tortoiseshell Optics</span>
+    </div>
+    <nav>
+        <span>Services</span>
+        <span>Products</span>
+        <span>Contact</span>
+    </nav>
+  </header>
+
+  <!-- Banner Section -->
+
 </body>
 </html>
