Finished navigation bar.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 <body>
 
   <!-- Header Section -->
-  <header class="flex bar">
+  <header>
   <!-- Navigation Bar -->
-    <div class="flex logo">
-      <img src="./resources/images/logo-white.png" alt="White glasses icon."  />
-      <span>Tortoiseshell Optics</span>
+    <div class="flex bar">
+      <div>
+        <img class="logo" src="./resources/images/logo-white.png" alt="White glasses icon."  />
+        <span>Tortoiseshell Optics</span>
+      </div>
+      <nav>
+          <span>Services</span>
+          <span>Products</span>
+          <span>Contact</span>
+      </nav>
     </div>
-    <nav>
-        <span>Services</span>
-        <span>Products</span>
-        <span>Contact</span>
-    </nav>
   </header>
 
   <!-- Banner Section -->
