--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     </div>
   </header>
 
-  <div>
-  <!-- Services Section -->
+    <!-- Services Section -->
     <div class="flex services">
       <div class="service">
         <img class="paper" src="./resources/images/paper-icon.png" alt="Black paper icon." />
@@ -53,17 +52,40 @@
     </div>
 
   <!-- Information Section -->
-    <div class"infos flex">
+    <div class"flex infos">
       <div class="info">
-        <h4 class="tittle">PHILOSOPHY</h4>
+        <div class="tittle">
+          <span>PHILOSOPHY</span>
+        </div>
         <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
       </div>
-    </div>
-    <div class="info">
-        <h4 class="tittle">APPOINTMENTS</h4>
+
+      <div class="info">
+        <div class="tittle">
+          <spam>APPOINTMENTS</spam>
+        </div>
         <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
       </div>
     </div>
+
+    <!-- <div class="supporting container">
+        <div class="info">
+          <div class="title">
+            PHILOSOPHY
+          </div>
+          <p>
+            Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.
+          </p>
+        </div>
+        <div class="info">
+          <div class="title">
+            APPOINTMENTS
+          </div>
+          <p>
+            Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.
+          </p>
+        </div>
+      </div> -->
   </div>
 
   <!-- Footer Section -->
