Finished desktop version.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Header Section -->
   <header>
   <!-- Navigation Bar Section -->
-    <div class="flex bar">
+    <div class="box bar">
       <div>
         <img class="logo" src="./resources/images/logo-white.png" alt="White glasses icon."  />
         <span>Tortoiseshell Optics</span>
@@ -28,7 +28,7 @@
       </nav>
     </div>
     <!-- Main Banner Section -->
-    <div class="flex" id="banner">
+    <div class="box" id="banner">
       <div class="banner">
         <h1>DON'T JUST LOOK, SEE.</h1>
       </div>
@@ -36,7 +36,7 @@
   </header>
 
     <!-- Services Section -->
-    <div class="flex services">
+    <div class="box content">
       <div class="service">
         <img class="paper" src="./resources/images/paper-icon.png" alt="Black paper icon." />
         <span>Comprehensive<br> Exams</span>
@@ -51,24 +51,7 @@
           </div>
     </div>
 
-  <!-- Information Section -->
-    <div class"flex infos">
-      <div class="info">
-        <div class="tittle">
-          <span>PHILOSOPHY</span>
-        </div>
-        <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
-      </div>
-
-      <div class="info">
-        <div class="tittle">
-          <spam>APPOINTMENTS</spam>
-        </div>
-        <p>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</p>
-      </div>
-    </div>
-
-    <!-- <div class="supporting container">
+    <div class="content box">
         <div class="info">
           <div class="title">
             PHILOSOPHY
@@ -85,11 +68,11 @@
             Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.
           </p>
         </div>
-      </div> -->
+      </div>
   </div>
 
   <!-- Footer Section -->
-  <footer class="flex">
+  <footer class="box">
     <div>
       <img class="logo" src="./resources/images/logo-black.png" alt="Black glasses icon."  />
       <span>Copyright Tortoiseshell Optics</span>
