Working on mobile layout.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,17 @@
     <div class="box bar">
       <div>
         <img class="logo" src="./resources/images/logo-white.png" alt="White glasses icon."  />
-        <span>Tortoiseshell Optics</span>
+        <span class="menu">Tortoiseshell Optics</span>
       </div>
       <nav>
+        <div class="menu">
           <span>Services</span>
           <span>Products</span>
           <span>Contact</span>
+        </div>
+        <div class="mobile">
+          <span>Menu</span>
+        </div>
       </nav>
     </div>
     <!-- Main Banner Section -->
