Finished mobile layout.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="./resources/images/ruler-icon.png" alt="Black ruler icon." />
           <span>Custom<br>Fittings</span>
         </div>
-        <div class="service">
+        <div class="service truck">
             <img src="./resources/images/truck-icon.png" alt="Black truck icon." />
             <span>Fast<br>Delivery</span>
           </div>
